--- a/clients/src/components/common/home/Homepage.scss
+++ b/clients/src/components/common/home/Homepage.scss
@@ -1,35 +1,37 @@
 @import "_setting.scss";
 
-.home {
-    .intro {
+ 
+
+.homepage {
+
+    @media screen and (max-width: 800) {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    width: 100%;
+    max-height: 990px;
+    font-family: var(--body-font);
+    background-color: var(--body-color);
+    margin-top: $navbar-height;
+    left: 0;
+    z-index: 0;
+    transition: 0.4s; // For animation dark mod
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    h5 .intro {
         text-align: left;
         font-size: 1.3vw;
     }
-
-    .homepage {
-        width: 100%;
-        max-height: 990px;
-        font-family: var(--body-font);
-        background-color: var(--body-color);
-        margin-top: $navbar-height;
-        left: 0;
-        z-index: 0;
-        transition: 0.4s; // For animation dark mod
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-
-        h1 {
-            font-size: 3vw;
-            color: var(--mint) !important;
-            font-weight: var(--font-bold);
-            text-align: left;
-        }
-
-        @media screen and (max-width: 700px) {
-            grid-template-columns: repeat(1, 1fr);
-        }
+    h6 {
+        font-size: 1.7vw;
+        font-family: var(--logo-font)
     }
-
+    h1 {
+        font-family: var(--logo-font);
+        color: var(--mint) !important;
+        font-weight: var(--font-bold);
+        text-align: left;
+    }
     .homepage__pic {
         max-width: 550px;
         vertical-align: center;
@@ -46,16 +48,17 @@
         align-content: center;
     }
 
+}
+
+
+
+.about {
+    margin-top: 120px;
     #about .nav__logo :hover {
         transform: scale(1.5);
         font-weight: 300;
         top: $navbar-height;
     }
-
-    .about {
-        margin-top: 120px;
-    }
-
     #create {
         font-family: var(--logo-font);
         font-size: var(--h1-font-size);
@@ -63,142 +66,33 @@
         font-weight: 600;
         margin: 10px;
     }
-
-
-    #mssv {
-        color: var(--mint);
-        box-sizing: border-box;
-        font-family: var(--body-font);
-        font-size: var(--h1-font-size);
-    }
-
-    .card__social a {
-        text-decoration: none;
-        color: var(--gray);
-        margin: 25px 20px 40px;
-        display: inline-block;
-        font-size: 50px;
-        transition: 0.25s;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    .card__social a:hover {
-        color: var(--mint);
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    .btn__contact__me {
-        width: 50%;
-        align-self: center;
-        color: var(--mint);
-        background-color: transparent;
-        border: 1px solid var(--mint);
-        border-radius: inherit;
-        cursor: pointer;
-        transition: 0.25s;
-        margin: 0;
-        box-sizing: border-box;
-    }
-
-    .btn__contact__me:hover {
-        background-color: var(--mint);
-        margin: 0;
-        padding: 0;
-        color: white;
-        box-sizing: border-box;
-    }
-
-    .col {
-        margin: auto
-    }
-
-    .profile {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        box-sizing: border-box;
-    }
-
-    .footer {
-        border-top: 1px solid var(--mint);
-        text-align: justify;
-        height: fit-content;
-        width: 100%;
-
-        &__logo {
-            margin: auto;
-            display: inline;
-
-            img {
-                max-width: 100px;
-                margin: 10px;
-            }
-        }
-
-        h1 {
-            font-family: var(--logo-font);
-            font-size: 150%;
-            text-align: center;
-            font-weight: 600;
-        }
-
-        h5 {
-            text-align: center;
-
-        }
-
-        h4 {
-            margin-top: 10px;
-            text-align: center;
-        }
-
-        .gv {
-            font-family: var(--logo-font);
-            color: var(--mint);
-            font-size: 80%;
-            font-weight: 500;
-        }
-    }
-
-    .vl {
-        align-items: center;
-        display: inline;
-        border-left: 4px solid var(--gray);
-        height: 100px;
-        position: absolute;
-        margin-left: 20px;
-        margin-top: 15px;
-        color: var(--mint);
-        padding: 20px;
-        vertical-align: middle;
-        font-family: var(--body-font);
-        font-size: 130%;
-        font-weight: 600;
-    }
-
-    .create__pic {
-        max-height: 300px !important;
-    }
-
-    .test__pic {
-        max-height: 300px !important;
-    }
-
     .about__contest {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         padding-top: 0.5rem;
-
+        .create__pic {
+            max-height: 300px !important;
+        }
+        
+        .test__pic {
+            max-height: 300px !important;
+        }
+    
         @media screen and (max-width: 700px) {
             grid-template-columns: repeat(1, 1fr);
         }
     }
+}
 
+.profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    box-sizing: border-box;
+    .col {
+        margin: auto
+    }
     .card-info {
         width: 400px;
         height: 400px;
@@ -211,7 +105,6 @@
         padding: 0;
         z-index: 0;
     }
-
     .card__img {
         width: 120px;
         height: 120px;
@@ -224,19 +117,17 @@
         cursor: pointer;
         padding: 0;
         box-sizing: border-box;
+        &:hover {
+            width: 100%;
+            height: 100%;
+            border-radius: unset;
+            border: unset;
+            transform: unset;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
     }
-
-    .card__img:hover {
-        width: 100%;
-        height: 100%;
-        border-radius: unset;
-        border: unset;
-        transform: unset;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
     #avatar {
         width: 100%;
         height: 100%;
@@ -246,25 +137,22 @@
         padding: 0;
         box-sizing: border-box;
     }
-
     .profile__name {
         margin-top: 10px !important;
         color: var(--black);
         padding: 40px 10px 0;
         box-sizing: border-box;
-
+    
         &:hover {
             color: var(--mint);
         }
     }
-
     #mssv {
         color: var(--mint);
         box-sizing: border-box;
         font-family: var(--body-font);
         font-size: var(--h1-font-size);
     }
-
     .card__social a {
         text-decoration: none;
         color: var(--gray);
@@ -275,15 +163,13 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        &:hover {
+            color: var(--mint);
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
     }
-
-    .card__social a:hover {
-        color: var(--mint);
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
     .btn__contact__me {
         width: 50%;
         align-self: center;
@@ -295,55 +181,34 @@
         transition: 0.25s;
         margin: 0;
         box-sizing: border-box;
-    }
-
-    .btn__contact__me:hover {
-        background-color: var(--mint);
-        margin: 0;
-        padding: 0;
-        color: white;
-        box-sizing: border-box;
-    }
-
-    .profile {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        box-sizing: border-box;
-    }
-
-    .footer {
-        border-radius: 10px;
-        border-top: 1px solid var(--mint);
-        text-align: justify;
-        height: 300px;
-        width: 100%;
-
-        &__logo {
-            margin: 20px 270px;
-            display: inline;
-
-            img {
-                max-width: 100px;
-                margin: 10px;
-            }
+        &.hover {
+            background-color: var(--mint);
+            margin: 0;
+            padding: 0;
+            color: white;
+            box-sizing: border-box;
         }
     }
+    
 
-    .vl {
-        align-items: center;
+}
+
+
+.footer {
+    border-radius: 10px;
+    border-top: 1px solid var(--mint);
+    text-align: justify;
+    height: 300px;
+    width: 100%;
+
+    &__logo {
+        margin: 20px 270px;
         display: inline;
-        border-left: 4px solid var(--gray);
-        height: 100px;
-        position: absolute;
-        margin-left: 20px;
-        margin-top: 15px;
-        color: var(--mint);
-        padding: 20px;
-        vertical-align: middle;
-        font-family: var(--body-font);
-        font-size: 130%;
-        font-weight: 600;
+
+        img {
+            max-width: 100px;
+            margin: 10px;
+        }
     }
 }
+
