--- a/clients/src/components/common/login/Login.scss
+++ b/clients/src/components/common/login/Login.scss
@@ -1,13 +1,13 @@
 @import '_setting.scss';
 
 .login {
-    margin: 10% auto 0;
+    margin: calc(60px + 3%) auto;
     font-family: var(--body-font);
     border: 1.5px solid var(--mint);
-    height: 400px;
-    width: 920px;
+    height: 50%;
+    width: 60%;
     border-radius: 30px;
-
+    padding-bottom: 3%;
 
     .nav__btn {
 
@@ -46,14 +46,13 @@
 
     .form__title {
         text-align: center;
-        padding: 25px;
+        padding-top: 5%;
         font-family: var(--logo-font);
         color: var(--mint);
         font-weight: 700;
     }
 
     .form__body {
-        display: flex;
         justify-content: center;
         align-items: center;
         box-sizing: border-box;
@@ -62,10 +61,8 @@
 
     .info__area {
         display: block;
-        justify-content: center;
-        align-items: center;
         box-sizing: border-box;
-        margin: -20px 10px 0 10%;
+        margin: auto;
 
         .nav__btn__login {
             padding: 5px 30px;
@@ -73,26 +70,26 @@
     }
 
     .auth__pic {
-        max-width: 350px;
+        width: 30%;
     }
 
-    input {
-        padding: 10px 20px;
-        margin: 10px;
-        display: block;
-        border-radius: 50px;
-        width: 300px;
-        font-size: 1rem;
-        border-radius: 50px;
-        border: 1px solid var(--mint);
-        color: var(--mint);
-        background-color: white;
-        font-weight: 700;
-
-        ::placeholder {
+    .input{
+        input {
+            padding:2% 4%;
+            margin: 3% auto auto;
+            display: block;
+            border-radius: 50px;
+            font-size: 1rem;
+            border-radius: 50px;
             border: 1px solid var(--mint);
+            color: var(--mint);
+            background-color: white;
+            font-weight: 700;    
+            ::placeholder {
+                border: 1px solid var(--mint);
+            }
+    
         }
-
     }
 
     .button {
@@ -100,7 +97,7 @@
             &-gg {
                 background: none;
                 border: none;
-                margin: 10px auto;
+                margin: auto;
 
                 &:hover {
                     background: none;
@@ -110,12 +107,12 @@
         }
 
         &__signup {
+            margin-top: -20px;
             border: 1px solid var(--mint);
             max-width: 150px;
             border-radius: 50px;
             color: white;
             background-color: var(--mint);
-            padding: 5px 0;
             font-weight: 600;
 
             &:hover {
@@ -156,9 +153,11 @@
     .forgotPassword{
         align-items: center;
     }    
-}
+    
 
+}
 .forgot{
+    padding: 2%;
     margin: 10% auto 0;
     font-family: var(--body-font);
     border: 1.5px solid var(--mint);
@@ -167,13 +166,25 @@
     height: fit-content;
     border-radius: 30px;
 
+    .form__title{
+        font-family: var(--logo-font);
+        color: var(--mint);
+        font-weight: 700;
+    }
+
     .email__reset{
         align-items: center;
         input {
-            margin:5% auto;
+            border: 1px solid var(--mint);
+            border-radius: 50px;
+            margin:3% auto;
             padding: 2% 4%;
             width: 60%;
+            color: var(--mint);
+            ::placeholder {
+                border: 1px solid var(--mint);
             }
+        }
     }
     .btn__resetPassword{
         font-family: var(--logo-font);
@@ -184,7 +195,6 @@
         border-radius: 50px;
         color:var(--white);
         padding:1% 4%;
-        margin-bottom: 7%;
         &:hover{
             background-color: var(--light-mint);
             color: var(--mint);
@@ -193,19 +203,32 @@
 }
 
 .reset{
-    margin: 12% auto;
+    padding: 2%;
+    margin: 10% auto 0;
     font-family: var(--body-font);
     border: 1.5px solid var(--mint);
-    width: 50%;
+    height: 400px;
+    width: 65%;
     height: fit-content;
     border-radius: 30px;
+    .form__title{
+        font-family: var(--logo-font);
+        color: var(--mint);
+        font-weight: 700;  
+        margin-bottom: 4%;      
+    }
     .password__reset{
-        align-items: center;
         input {
-            margin:2% auto;
-            padding: 1% 4%;
-            width: 75%;
+            border: 1px solid var(--mint);
+            border-radius: 50px;
+            margin-bottom:3%;
+            padding: 2% 4%;
+            width: 60%;
+            color: var(--mint);
+            ::placeholder {
+                border: 1px solid var(--mint);
             }
+        }
     }
     .btn__resetPassword{
         font-family: var(--logo-font);
@@ -216,7 +239,6 @@
         border-radius: 50px;
         color:var(--white);
         padding:1% 4%;
-        margin-bottom: 7%;
         &:hover{
             background-color: var(--light-mint);
             color: var(--mint);
