--- a/clients/src/components/MultiChoices/MultiChoices.scss
+++ b/clients/src/components/MultiChoices/MultiChoices.scss
@@ -2,7 +2,7 @@
 
 .app-container {
     display: flex;
-    margin-top: 1.1*$navbar-height;
+    margin-top: $navbar-height;
 
     .row {
         width: 100%;
