--- a/clients/src/App.scss
+++ b/clients/src/App.scss
@@ -1,5 +1,9 @@
 @import '_setting.scss';
 
+iframe {
+    display: none !important;
+}
+
 .app {
     &__body {
         margin-top: 80px;
@@ -22,7 +26,7 @@
     button {
         box-shadow: $box-shadow;
     }
-    
+
     background-color: $app-bg-color;
     align-items: center;
     text-align: center;
