--- a/clients/src/components/common/login/Login.scss
+++ b/clients/src/components/common/login/Login.scss
@@ -73,9 +73,12 @@
         width: 30%;
     }
 
-    .input{
+    .input {
+        padding: auto;
+        margin: 20px;
+
         input {
-            padding:2% 4%;
+            padding: 2% 4%;
             margin: 3% auto auto;
             display: block;
             border-radius: 50px;
@@ -84,12 +87,17 @@
             border: 1px solid var(--mint);
             color: var(--mint);
             background-color: white;
-            font-weight: 700;    
+            font-weight: 700;
+
             ::placeholder {
                 border: 1px solid var(--mint);
             }
-    
+
         }
+    }
+
+    .makeRed {
+        border-bottom: 1px solid red !important;
     }
 
     .button {
@@ -122,13 +130,9 @@
         }
     }
 
-    .input {
-        padding: auto;
-        margin: 20px;
-    }
-
     .login__forget {
         display: inline;
+
         .nav__btn__signup {
             padding: 5px 30px;
         }
@@ -150,13 +154,15 @@
     .register {
         display: inline-flex;
     }
-    .forgotPassword{
+
+    .forgotPassword {
         align-items: center;
-    }    
-    
+    }
+
 
 }
-.forgot{
+
+.forgot {
     padding: 2%;
     margin: 10% auto 0;
     font-family: var(--body-font);
@@ -166,43 +172,47 @@
     height: fit-content;
     border-radius: 30px;
 
-    .form__title{
+    .form__title {
         font-family: var(--logo-font);
         color: var(--mint);
         font-weight: 700;
     }
 
-    .email__reset{
+    .email__reset {
         align-items: center;
+
         input {
             border: 1px solid var(--mint);
             border-radius: 50px;
-            margin:3% auto;
+            margin: 3% auto;
             padding: 2% 4%;
             width: 60%;
             color: var(--mint);
+
             ::placeholder {
                 border: 1px solid var(--mint);
             }
         }
     }
-    .btn__resetPassword{
+
+    .btn__resetPassword {
         font-family: var(--logo-font);
         font-size: 1.15rem;
         font-weight: 700;
         background-color: var(--mint);
         border: 1px solid var(--mint);
         border-radius: 50px;
-        color:var(--white);
-        padding:1% 4%;
-        &:hover{
+        color: var(--white);
+        padding: 1% 4%;
+
+        &:hover {
             background-color: var(--light-mint);
             color: var(--mint);
         }
     }
 }
 
-.reset{
+.reset {
     padding: 2%;
     margin: 10% auto 0;
     font-family: var(--body-font);
@@ -211,35 +221,40 @@
     width: 65%;
     height: fit-content;
     border-radius: 30px;
-    .form__title{
+
+    .form__title {
         font-family: var(--logo-font);
         color: var(--mint);
-        font-weight: 700;  
-        margin-bottom: 4%;      
+        font-weight: 700;
+        margin-bottom: 4%;
     }
-    .password__reset{
+
+    .password__reset {
         input {
             border: 1px solid var(--mint);
             border-radius: 50px;
-            margin-bottom:3%;
+            margin-bottom: 3%;
             padding: 2% 4%;
             width: 60%;
             color: var(--mint);
+
             ::placeholder {
                 border: 1px solid var(--mint);
             }
         }
     }
-    .btn__resetPassword{
+
+    .btn__resetPassword {
         font-family: var(--logo-font);
         font-size: 1.15rem;
         font-weight: 700;
         background-color: var(--mint);
         border: 1px solid var(--mint);
         border-radius: 50px;
-        color:var(--white);
-        padding:1% 4%;
-        &:hover{
+        color: var(--white);
+        padding: 1% 4%;
+
+        &:hover {
             background-color: var(--light-mint);
             color: var(--mint);
         }
