--- a/clients/src/pages/home/Homepage.scss
+++ b/clients/src/pages/home/Homepage.scss
@@ -1,20 +1,11 @@
 @import "_setting.scss";
 
-.homepage {
-
-    @media screen and (max-width: 800) {
-        grid-template-columns: repeat(1, 1fr);
-    }
+.home {
     width: 100%;
-    max-height: 990px;
+    height: 90vh;
     font-family: var(--body-font);
     background-color: var(--body-color);
-    margin-top: $navbar-height;
-    left: 0;
-    z-index: 0;
-    transition: 0.4s; // For animation dark mod
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    margin-top: $navbar-height - $gap;
 
     h5 .intro {
         text-align: left;
@@ -28,7 +19,6 @@
         font-family: var(--logo-font);
         color: var(--mint) !important;
         font-weight: var(--font-bold);
-        text-align: left;
     }
     .homepage__pic {
         max-width: 550px;
@@ -48,37 +38,27 @@
 
 }
 
-
-
 .about {
-    margin-top: 120px;
-    #about .nav__logo :hover {
-        transform: scale(1.5);
-        font-weight: 300;
-        top: $navbar-height;
+    padding: 5vh 0vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2.2*$navbar-height;
+
+    h2 {
+        font-family: var(--logo-font);
+        color: var(--mint) !important;
+        font-weight: var(--font-bold);
     }
+
     #create {
         font-family: var(--logo-font);
         font-size: var(--h1-font-size);
         color: var(--mint);
         font-weight: 600;
         margin: 10px;
-    }
-    .about__contest {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        padding-top: 0.5rem;
-        .create__pic {
-            max-height: 300px !important;
-        }
-        
-        .test__pic {
-            max-height: 300px !important;
-        }
-    
-        @media screen and (max-width: 700px) {
-            grid-template-columns: repeat(1, 1fr);
-        }
     }
 }
 
@@ -191,22 +171,6 @@
 
 }
 
-
-
 .footer {
-    border-radius: 10px;
-    border-top: 1px solid var(--mint);
-    text-align: justify;
-    height: 300px;
-    width: 100%;
-
-    &__logo {
-        margin: 20px 270px;
-        display: inline;
-
-        img {
-            max-width: 100px;
-            margin: 10px;
-        }
-    }
+    
 }
