--- a/clients/src/components/User/login/Login.scss
+++ b/clients/src/components/User/login/Login.scss
@@ -1,262 +1,128 @@
 @import '_setting.scss';
 
 .login {
-    margin: calc(60px + 3%) auto;
-    font-family: var(--body-font);
-    border: 1.5px solid var(--mint);
-    height: 50%;
-    width: 60%;
-    border-radius: 30px;
-    padding-bottom: 3%;
+    height: 100vh;
 
-    .nav__btn {
-
-        &__login {
-            border-radius: 50px;
-            width: auto;
-            font-size: 1rem;
-            border: 1px solid var(--mint);
-            color: var(--mint) !important;
-            background-color: white;
-            font-weight: 700;
-
-            &:hover {
-                color: white !important;
-                background-color: var(--light-mint);
-            }
-
+    .login-form {
+        font-family: var(--body-font);
+        border: 1.5px solid var(--mint);
+        border-radius: 30px;
+        padding-bottom: 3%;
+        margin-bottom: 5vh;
+        width: fit-content;
+        height: fit-content;
+    
+        @media screen and (max-width: 767px) {
+            border: none;
+            margin-top: $navbar-height;
         }
-
-        &__signup {
-            border-radius: 50px;
-            width: auto;
-            font-size: 1rem;
-            color: white;
-            background-color: var(--mint);
-            border: 0px;
-            font-weight: 600;
-
-            &:hover {
-                color: var(--strong-mint);
-                background-color: var(--light-mint);
-            }
-        }
-
-    }
-
-    .form__title {
-        text-align: center;
-        padding-top: 5%;
-        font-family: var(--logo-font);
-        color: var(--mint);
-        font-weight: 700;
-    }
-
-    .form__body {
-        justify-content: center;
-        align-items: center;
-        box-sizing: border-box;
-        margin: auto;
-    }
-
-    .info__area {
-        display: block;
-        box-sizing: border-box;
-        margin: auto;
-
-        .nav__btn__login {
-            padding: 5px 30px;
-        }
-    }
-
-    .auth__pic {
-        width: 30%;
-    }
-
-    .input {
-        padding: auto;
-        margin: 20px;
-
-        input {
-            padding: 2% 4%;
-            margin: 3% auto auto;
-            display: block;
-            border-radius: 50px;
-            font-size: 1rem;
-            border-radius: 50px;
-            border: 1px solid var(--mint);
-            color: var(--mint);
-            background-color: white;
-            font-weight: 700;
-
-            ::placeholder {
+    
+        .nav__btn {
+    
+            &__login {
+                border-radius: 50px;
+                width: auto;
+                font-size: 1rem;
                 border: 1px solid var(--mint);
-            }
-
-        }
-    }
-
-    .makeRed {
-        border-bottom: 1px solid red !important;
-    }
-
-    .button {
-        &__login {
-            &-gg {
-                background: none;
-                border: none;
-                margin: auto;
-
+                color: var(--mint) !important;
+                background-color: white;
+                font-weight: 700;
+    
                 &:hover {
-                    background: none;
-                    color: var(--mint)
+                    color: white !important;
+                    background-color: var(--light-mint);
+                }
+    
+            }
+    
+            &__signup {
+                border-radius: 50px;
+                width: auto;
+                font-size: 1rem;
+                color: white;
+                background-color: var(--mint);
+                border: 0px;
+                font-weight: 600;
+    
+                &:hover {
+                    color: var(--strong-mint);
+                    background-color: var(--light-mint);
                 }
             }
+    
         }
-
-        &__signup {
-            margin-top: -20px;
-            border: 1px solid var(--mint);
-            max-width: 150px;
-            border-radius: 50px;
-            color: white;
-            background-color: var(--mint);
-            font-weight: 600;
-
-            &:hover {
-                color: var(--strong-mint);
-                background: var(--light-mint);
+    
+        .form__title {
+            text-align: center;
+            padding-top: 5%;
+            font-family: var(--logo-font);
+            color: var(--mint);
+            font-weight: 700;
+        }
+    
+        .form__body {
+            justify-content: center;
+            align-items: center;
+            box-sizing: border-box;
+            margin: auto;
+        }
+    
+        .info__area {
+            display: block;
+            box-sizing: border-box;
+            margin: auto;
+    
+            .nav__btn__login {
+                padding: 5px 30px;
             }
         }
-    }
-
-    .login__forget {
-        display: inline;
-
-        .nav__btn__signup {
-            padding: 5px 30px;
+    
+        .input {
+            padding: auto;
+            margin: 20px;
+    
+            input {
+                padding: 2% 4%;
+                margin: 3% auto auto;
+                display: block;
+                border-radius: 50px;
+                font-size: 1rem;
+                border-radius: 50px;
+                border: 1px solid var(--mint);
+                color: var(--mint);
+                background-color: white;
+                font-weight: 700;
+    
+                ::placeholder {
+                    border: 1px solid var(--mint);
+                }
+    
+            }
         }
-
-    }
-
-    .forget__button {
-        background: none;
-        border: none;
-        color: var(--gray);
-        text-decoration: underline;
-
-        &:hover {
+    
+        .login__forget {
+            display: inline;
+    
+            .nav__btn__signup {
+                padding: $gap/2 $gap;
+            }
+    
+        }
+    
+        .forget__button {
             background: none;
-            color: var(--mint)
-        }
-    }
-
-    .register {
-        display: inline-flex;
-    }
-
-    .forgotPassword {
-        align-items: center;
-    }
-
-
-}
-
-.forgot {
-    padding: 2%;
-    margin: 10% auto 0;
-    font-family: var(--body-font);
-    border: 1.5px solid var(--mint);
-    height: 400px;
-    width: 50%;
-    height: fit-content;
-    border-radius: 30px;
-
-    .form__title {
-        font-family: var(--logo-font);
-        color: var(--mint);
-        font-weight: 700;
-    }
-
-    .email__reset {
-        align-items: center;
-
-        input {
-            border: 1px solid var(--mint);
-            border-radius: 50px;
-            margin: 3% auto;
-            padding: 2% 4%;
-            width: 60%;
-            color: var(--mint);
-
-            ::placeholder {
-                border: 1px solid var(--mint);
+            border: none;
+            color: var(--gray);
+            text-decoration: underline;
+    
+            &:hover {
+                background: none;
+                color: var(--mint)
             }
         }
     }
 
-    .btn__resetPassword {
-        font-family: var(--logo-font);
-        font-size: 1.15rem;
-        font-weight: 700;
-        background-color: var(--mint);
-        border: 1px solid var(--mint);
-        border-radius: 50px;
-        color: var(--white);
-        padding: 1% 4%;
-
-        &:hover {
-            background-color: var(--light-mint);
-            color: var(--mint);
-        }
-    }
-}
-
-.reset {
-    padding: 2%;
-    margin: 10% auto 0;
-    font-family: var(--body-font);
-    border: 1.5px solid var(--mint);
-    height: 400px;
-    width: 65%;
-    height: fit-content;
-    border-radius: 30px;
-
-    .form__title {
-        font-family: var(--logo-font);
-        color: var(--mint);
-        font-weight: 700;
-        margin-bottom: 4%;
-    }
-
-    .password__reset {
-        input {
-            border: 1px solid var(--mint);
-            border-radius: 50px;
-            margin-bottom: 3%;
-            padding: 2% 4%;
-            width: 60%;
-            color: var(--mint);
-
-            ::placeholder {
-                border: 1px solid var(--mint);
-            }
-        }
-    }
-
-    .btn__resetPassword {
-        font-family: var(--logo-font);
-        font-size: 1.15rem;
-        font-weight: 700;
-        background-color: var(--mint);
-        border: 1px solid var(--mint);
-        border-radius: 50px;
-        color: var(--white);
-        padding: 1% 4%;
-
-        &:hover {
-            background-color: var(--light-mint);
-            color: var(--mint);
-        }
+    @media screen and (max-width: 768px) {
+        height: fit-content;
     }
 }
