fix check if vnpay url is valid for certain user

--- a/clients/src/components/payments/PaymentReturn.scss
+++ b/clients/src/components/payments/PaymentReturn.scss
@@ -3,6 +3,7 @@
 .payment-return {
     margin-top: $navbar-height;
     height: 90vh;
+    width: 100vw;
 
     h1 {
         font-family: var(--logo-font);
