thêm cài đặt số lần tối đa mà thí sinh có thể thi

--- a/clients/src/components/exam/panelPreview/PanelPreview.scss
+++ b/clients/src/components/exam/panelPreview/PanelPreview.scss
@@ -110,8 +110,7 @@ $question-preview-background: #F3F0D7;
 
         .question-actions {
             padding-left: $gap;
-            padding-right: $gap*2;
-            padding-top: $gap;
+            padding-right: $gap;
             display: flex;
 
             >* {
