--- a/clients/src/components/account/handlePassword/ResetPassword.scss
+++ b/clients/src/components/account/handlePassword/ResetPassword.scss
@@ -1,50 +1,53 @@
 @import '_setting.scss';
 
-.reset {
-    padding: 2%;
-    margin: 10% auto 0;
-    font-family: var(--body-font);
-    border: 1.5px solid var(--mint);
-    height: 400px;
-    width: 65%;
-    height: fit-content;
-    border-radius: 30px;
+.reset-password {
+    margin-top: $navbar-height;
+    height: calc(100vh - #{$navbar-height});
 
-    .form__title {
-        font-family: var(--logo-font);
-        color: var(--mint);
-        font-weight: 700;
-        margin-bottom: 4%;
-    }
+    .reset {
+        padding: 5vw;
+        font-family: var(--body-font);
+        border: 1.5px solid var(--mint);
+        border-radius: 30px;
+        height: fit-content;
+        margin-top: 10%;
 
-    .password__reset {
-        input {
-            border: 1px solid var(--mint);
-            border-radius: 50px;
-            margin-bottom: 3%;
-            padding: 2% 4%;
-            width: 60%;
+        .form__title {
+            font-family: var(--logo-font);
             color: var(--mint);
+            font-weight: 700;
+            margin-bottom: 4%;
+        }
 
-            ::placeholder {
+        .password__reset {
+            input {
                 border: 1px solid var(--mint);
+                border-radius: 50px;
+                margin-bottom: 3%;
+                padding: 2% 4%;
+                width: 100%;
+                color: var(--mint);
+
+                ::placeholder {
+                    border: 1px solid var(--mint);
+                }
             }
         }
-    }
 
-    .btn__resetPassword {
-        font-family: var(--logo-font);
-        font-size: 1.15rem;
-        font-weight: 700;
-        background-color: var(--mint);
-        border: 1px solid var(--mint);
-        border-radius: 50px;
-        color: var(--white);
-        padding: 1% 4%;
+        .btn__resetPassword {
+            font-family: var(--logo-font);
+            font-size: 1.15rem;
+            font-weight: 700;
+            background-color: var(--mint);
+            border: 1px solid var(--mint);
+            border-radius: 50px;
+            color: var(--white);
+            padding: 1% 4%;
 
-        &:hover {
-            background-color: var(--light-mint);
-            color: var(--mint);
+            &:hover {
+                background-color: var(--light-mint);
+                color: var(--mint);
+            }
         }
     }
 }
