--- a/clients/src/App.scss
+++ b/clients/src/App.scss
@@ -1,11 +1,7 @@
 @import '_setting.scss';
 
-iframe {
+#ssIFrame_google {
     display: none !important;
-}
-
-.fb_customer_chat_bounce_out_v2 {
-    display: inline-block !important;
 }
 
 .app {
