--- a/clients/src/components/contest/Contest.scss
+++ b/clients/src/components/contest/Contest.scss
@@ -37,8 +37,8 @@ $heading-height: 10vh;
     }
 
     .list-contests {
-        display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         border: 2px dashed gray;
         border-radius: $gap;
         background-color: #f0e9d285;
