`FaceDetect` when TakeTest

--- a/clients/src/components/exam/panelQuestionPicker/PanelQuestionPicker.scss
+++ b/clients/src/components/exam/panelQuestionPicker/PanelQuestionPicker.scss
@@ -1,5 +1,9 @@
 @import '_setting.scss';
 
+canvas {
+    position: absolute;
+}
+
 .take-test {
     padding: $gap;
     background-color: $bg-color;
@@ -17,11 +21,37 @@
         margin: $gap/2 0;
     }
 
+    .webcam {
+        background-color: rgba(217, 233, 207, 0.548);
+        border-radius: $gap;
+        height: 20vh;
+        padding: $gap/2;
+        border: 2px solid $theme-color;
+
+        &::-webkit-scrollbar {
+            -webkit-appearance: none;
+        }
+
+        &::-webkit-scrollbar:vertical {
+            width: 8px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: lighten($color: $theme-color, $amount: 5);
+            border-radius: $gap;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+    }
+
     .question-picker {
         background-color: rgba(217, 233, 207, 0.548);
         border-radius: $gap;
-        height: 64vh;
+        height: 42vh;
         padding: $gap/2;
+        margin: $gap 0;
         border: 2px solid $theme-color;
 
         &::-webkit-scrollbar {
