--- a/clients/src/components/exam/panelQuestionPicker/PanelQuestionPicker.scss
+++ b/clients/src/components/exam/panelQuestionPicker/PanelQuestionPicker.scss
@@ -1,9 +1,5 @@
 @import '_setting.scss';
 
-canvas {
-    position: absolute;
-}
-
 .take-test {
     padding: $gap;
     background-color: $bg-color;
@@ -26,6 +22,7 @@ canvas {
         border-radius: $gap;
         height: 20vh;
         padding: $gap/2;
+        margin: $gap 0;
         border: 2px solid $theme-color;
 
         &::-webkit-scrollbar {
@@ -49,9 +46,8 @@ canvas {
     .question-picker {
         background-color: rgba(217, 233, 207, 0.548);
         border-radius: $gap;
-        height: 42vh;
+        height: 40vh;
         padding: $gap/2;
-        margin: $gap 0;
         border: 2px solid $theme-color;
 
         &::-webkit-scrollbar {
@@ -114,13 +110,13 @@ canvas {
         }
 
         .time-remain-show {
-            height: 55px;
+            height: 50px;
 
             .time-countdown {
                 background-color: transparent !important;
                 border-color: transparent !important;
                 outline: none !important;
-                font-size: 30px;
+                font-size: 26px;
             }
 
             .timeout {
@@ -151,12 +147,12 @@ canvas {
         padding: 0px;
 
         .question-picker {
-            left: 0px;
+            left: 15vw;
             bottom: 0px;
             z-index: 1000;
             position: fixed;
             height: $question-picker-height;
-            width: 100%;
+            width: 85vw;
             padding-right: 160px;
             border-radius: 0px;
 
@@ -179,7 +175,18 @@ canvas {
             }
         }
 
+        .webcam {
+            margin-bottom: $question-picker-height*1.25 !important;
+        }
+
         .time-remain {
+            left: 0px;
+            bottom: 0px;
+            z-index: 1000;
+            position: fixed;
+            height: $question-picker-height;
+            width: 15vw;
+            min-width: 80px;
             margin: 0;
             padding: $gap/2;
             border: none;
@@ -191,7 +198,7 @@ canvas {
             }
 
             .time-remain-show {
-                height: 32px;
+                height: 100%;
                 justify-content: center;
 
                 .time-countdown {
