update `share content`

--- a/clients/src/components/common/share/Share.scss
+++ b/clients/src/components/common/share/Share.scss
@@ -1,6 +1,12 @@
 @import '_setting.scss';
 
-button {
-    box-shadow: none !important;
-    outline: none !important;
+.share-content {
+    button {
+        box-shadow: none !important;
+        outline: none !important;
+    }
+
+    button ~ button {
+        margin: $gap/2;
+    }
 }
