--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -53,19 +53,20 @@ $body-font: "Source Sans Pro", sans-serif;
   align-items: center;
 }
 
-.data-table {
-  .mdb-datatable {
-    .row {
-      .d-flex.w-100.justify-content-between {
-        flex-wrap: wrap !important;
 
-        @media screen and (max-width: 650px) {
-          justify-content: center !important;
-        }
+.mdb-datatable {
+  .row {
+    .d-flex.w-100.justify-content-between {
+      flex-wrap: wrap !important;
+
+      @media screen and (max-width: 650px) {
+        justify-content: center !important;
+        margin: $gap 0;
       }
     }
   }
 }
+
 
 :root {
   // === COLOR ===
