--- a/clients/src/components/admin/Admin.scss
+++ b/clients/src/components/admin/Admin.scss
@@ -3,12 +3,15 @@
 .dashboard {
     overflow-x: hidden;
 
-    .row {
-        margin: 0px !important;
+    .sidebar-menu {
+        z-index: 10000;
+        position: fixed;
+
     }
 
     .main-container {
         padding: 0px !important;
+        padding-left: 70px !important;
         margin-top: $navbar-height;
 
         .header {
